Fixed title CSS bug on firefox. Added Opera gradient

--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -123,10 +123,11 @@ img {
 }
 
 #title p {
+  height: 30px;
   font-size: 72px;
   margin-left: 145px;
   margin-top: 35px;
-  margin-bottom: 20px;
+  margin-bottom: 25px;
   text-shadow: 0 2px 1px rgba(0, 0, 0, .7);
 }
 
@@ -145,6 +146,7 @@ img {
   
   background-color: #e42735;
   background-image: -moz-linear-gradient(top, #000000 0%, #555555 100%);
+  background-image: -o-linear-gradient(top, #000000 0%, #555555 100%);
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#000000), to(#555555));
 }
 
@@ -170,6 +172,7 @@ img {
   min-height: 530px;
   background-color: #c4c4c4;
   background-image: -moz-linear-gradient(top, #fcfcfc 0%, #dddddd 100%);
+  background-image: -o-linear-gradient(top, #fcfcfc 0%, #dddddd 100%);
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fcfcfc), to(#dddddd));
   border: 1px solid #cccccc;
   border-top: 1px solid #efefef;
